--- a/public/package.json
+++ b/public/package.json
@@ -22,7 +22,9 @@
     "@angular/router": "~8.0.0",
     "core-js": "^2.5.4",
     "ng-socket-io": "^0.2.4",
+    "ngx-color-picker": "^7.5.0",
     "rxjs": "~6.5.2",
+    "rxjs-compat": "^6.5.2",
     "tslib": "^1.9.0",
     "yarn": "^1.16.0",
     "zone.js": "~0.9.1"
